# mathlang

./: .gitignore  .gitmodules  BYTECODE_PLAN.md  CLAUDE.md  CONSIDERATIONS.md  Cargo.toml  MATHLANG_SKILL.md  MATRIX_PLAN.txt  PLAN.md  PROGRESS.md  README.md  TODO.txt  TODO_BUGS.txt  TODO_FEATURES.txt  TYPEHINTS.md  advanced.m  advanced.math  animation_test.math  build.sh  heat.math  mathlang.nanorc  physics.m  physics.math  tests.sh
crates/mathlang-cubecl/: Cargo.toml  README.md  tests.sh
crates/mathlang-cubecl/examples/: euler2d_riemann.mc
crates/mathlang-cubecl/src/: animate.rs  ast.rs  builtins.rs  field.rs  interp.rs  io.rs  lexer.rs  main.rs  parser.rs  pic.rs  repl.rs  spike.rs  value.rs
crates/mathlang-cubecl/src/compute/: kernels.rs  mod.rs  target.rs
crates/mathlang-cubecl/tests/: cli.rs
docs/: CODEBASE.md  CONSIDERATIONS.md  EVALUATION.md  MATHLANG_SKILL.md  PDE_ERGONOMICS.md
examples/: advanced.math  animation_test.math  conversions.math  fluid2D.math  fluid2D_fields.math  gpu_grayscott.math  gpu_heat2D.math  gravity.math  gravity_gas.math  heat.math  integrators.math  physics.math  pic_em_tao.math  pic_plasma.math
help/: GPU.txt  abs.md  acos.md  acos.txt  all.txt  and.md  and.txt  any.txt  append.md  append.txt  arg.md  argmax.md  argmin.md  argmin.txt  asin.md  asin.txt  atan.md  atan.txt  atan2.md  cat.md  cat.txt  cbrt.md  cbrt.txt  ceil.md  ceil.txt  cell.md  cell.txt  clamp.md  col.md  col.txt  cols.md  compose.md  concat.md  concat.txt  conj.md  conj.txt  cos.md  cos.txt  cosh.md  cosh.txt  (+198 more)
help/bang/: animate2D.md  animate2D.txt  animate2D_raw.md  animate2Dforever.txt  clear.md  clear.txt  defs.md  defs.txt  graph.md  help.md  include.md  include.txt  loadhdf5.md  loadnpy.md  loadtensor.md  loadtensor.txt  print.md  print.txt  quit.md  quit.txt  savehdf5.md  savenpy.md  savetensor.md  type.md  version.md  version.txt
src/: animate.rs  ast.rs  eval.rs  graph.rs  lexer.rs  main.rs  parser.rs  repl.rs  vm.rs
src/gpu/: context.rs  fft.wgsl  mod.rs
src/ns/: bits.rs  forms.rs  linalg.rs  mod.rs  operators.rs  ops.rs  pic.rs  solver.rs  special.rs  stats.rs  vec.rs
