[package]
name = "mathlang"
version = "0.12.0"
edition = "2024"

[[bin]]
name = "m"
path = "src/main.rs"

[dependencies]
rustyline = "14"
rand = "0.8"
plotters = { version = "0.3", default-features = false, features = [
    "bitmap_backend", "bitmap_encoder", "line_series", "ttf",
] }
libm = "0.2"
rustfft = "6"
