[package]
name = "mathlang"
version = "0.23.1"
edition = "2024"

[[bin]]
name = "m"
path = "src/main.rs"

[dependencies]
rustyline = "14"
rand = "0.8"
plotters = { version = "0.3", default-features = false, features = [
    "bitmap_backend", "bitmap_encoder", "line_series", "ttf",
] }
image = { version = "0.24", default-features = false, features = ["png"] }
libm = "0.2"
rustfft = "6"
hdf5 = { package = "hdf5-metno", version = "0.12", optional = true }

[features]
hdf5 = ["dep:hdf5"]
